--- a/index.html
+++ b/index.html
@@ -99,6 +99,68 @@
     </div>
   </div>
 
+
+
+  <!-- Trending -->
+  <div class="container">
+    <div class="row book-showcase quick-reads">
+      <div class="col-xs-12 list-title">
+        <h6>Now Trending<span class="tag tag-default float-xs-right">See All</span></h6>
+      </div>
+      <div class="col-xs-12 carousel">
+        <ul>
+          <li>
+            <div class="carousel-card">
+              <img class="carousel-cover" src="./img/11.jpg">
+              <span class="carousel-time">4 hrs.</span>
+            </div>
+
+          </li>
+
+          <li>
+            <div class="carousel-card">
+              <img class="carousel-cover" src="./img/12.jpg">
+              <span class="carousel-time">4 hrs.</span>
+            </div>
+
+          </li>
+
+          <li>
+            <div class="carousel-card">
+              <img class="carousel-cover" src="./img/13.jpg">
+              <span class="carousel-time">2 hrs.</span>
+            </div>
+
+          </li>
+
+          <li>
+            <div class="carousel-card">
+              <img class="carousel-cover" src="./img/14.jpg">
+              <span class="carousel-time">12 hrs.</span>
+            </div>
+
+          </li>
+
+          <li>
+            <div class="carousel-card">
+              <img class="carousel-cover" src="./img/15.jpg">
+              <span class="carousel-time">4 hrs.</span>
+            </div>
+
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+
+  <footer class="footer bg-primary text-xs-center">
+    <div class="container">
+    <span class="text-white">&copy2016 ReadMeter Inc.</span>
+    </div>
+  </footer>
+
+
   <!-- jQuery first, then Tether, then Bootstrap JS. -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
