--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
           </div>          
         </div>
-        <div class="col-xs-4">
+        <div class="col-xs-4 offset-xs-1">
           <a class="navbar-brand" href="#">ReadMeter</a>
         </div>
         <div class="col-xs-6"></div>
