--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <nav class="navbar navbar-dark bg-primary text-white">
+  <nav class="navbar navbar-dark navbar-fixed-top bg-primary text-white">
     <div class="container">
       <div class="row">
         <div class="col-xs-1">
