--- a/search_landing.html
+++ b/search_landing.html
@@ -45,13 +45,13 @@
     </div><!-- container  -->
   </div><!-- jumbotron  -->
   <div class="container">
-    <div class="row book-showcase quick-reads">
+  <div class="row search-results-bar quick-reads">
       <div class="col-xs-3 list-title">
         <h4>Search Results</h4>
       </div>
-      <div class="col-xs-3 offset-xs-6">
+      <div class="col-xs-5 offset-xs-4">
         <nav aria-label="Page navigation ">
-          <ul class="pagination">
+          <ul class="pagination pagination-sm">
             <li class="page-item disabled"">
               <a class="page-link" href="#" aria-label="Previous">
                 <span aria-hidden="true">&laquo;</span>
@@ -59,10 +59,6 @@
               </a>
             </li>
             <li class="page-item active"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">4</a></li>
-            <li class="page-item"><a class="page-link" href="#">5</a></li>
             <li class="page-item">
               <a class="page-link" href="#" aria-label="Next">
                 <span aria-hidden="true">&raquo;</span>
