--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
   <footer class="footer bg-primary text-xs-center">
     <div class="container">
-    <span class="text-white">&copy2016 ReadMeter Inc.</span>
+    <span class="text-white">&copy;2016 ReadMeter Inc.</span>
     </div>
   </footer>
 
