--- a/search_landing-test.html
+++ b/search_landing-test.html
@@ -52,7 +52,7 @@
       <div class="col-xs-5 offset-xs-4">
         <nav aria-label="Page navigation ">
           <ul class="pagination pagination-sm">
-            <li class="page-item disabled"">
+          <li class="page-item disabled">
               <a class="page-link" href="#" aria-label="Previous">
                 <span aria-hidden="true">&laquo;</span>
                 <span class="sr-only">Previous</span>
