--- a/search-card.html
+++ b/search-card.html
@@ -5,80 +5,84 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-
-  <link rel="stylesheet" type="text/css" href="plugins-0/reset/_reset.css">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <ul class="container-test">
-    <li class="search-card-test">
-      <div class="search-details-cover-test">
-        <img  src="./img/1.jpg">
-        <p class="details-link-test"><a href="#">More Details</a></p>
-      </div>
-      <div class="search-details-info-test">
-        <h5 class="search-details-title-test">A Game Of Thrones</h5>
-        <h6 class="search-details-author-test">George R. R. Martin</h6>
-        <div class="search-details-time-test">
-          <p class="search-details-time-title-test">Expected Reading Time: </p>
-          <p class="search-details-time-amount-test">49 Hours and 24 Minutes</p>
-        </div>
-        <img class="amazon-banner-01" src="./img/icons/amazon-banner-01.gif">
-      </div>
-      <div class="search-details-table-test">      
-        <table>
-          <tr><th>Year</th> <td>2011</td></tr>
-          <tr><th>Pages</th> <td>512</td></tr>
-          <tr><th>Words</th> <td>344,000</td></tr>
-          <tr><th>Genre</th> <td>Fantasy</td></tr>
-        </table>    
-      </li>
-
-      <li class="search-card-test">
-        <div class="search-details-cover-test">
-          <img  src="./img/2.jpg">
-          <p class="details-link-test"><a href="#">More Details</a></p>
-        </div>
-        <div class="search-details-info-test">
-          <h5 class="search-details-title-test">A Clash of Kings</h5>
-          <h6 class="search-details-author-test">George R. R. Martin</h6>
-          <div class="search-details-time-test">
-            <p class="search-details-time-title-test">Expected Reading Time: </p>
-            <p class="search-details-time-amount-test">49 Hours and 24 Minutes</p>
-          </div>
-          <img class="amazon-banner-01" src="./img/icons/amazon-banner-01.gif">
-        </div>
-        <div class="search-details-table-test">      
-          <table>
-            <tr><th>Year</th> <td>2011</td></tr>
-            <tr><th>Pages</th> <td>512</td></tr>
-            <tr><th>Words</th> <td>344,000</td></tr>
-            <tr><th>Genre</th> <td>Fantasy</td></tr>
-          </table>    
-        </li>
-        <li class="search-card-test">
-          <div class="search-details-cover-test">
-            <img  src="./img/5.jpg">
-            <p class="details-link-test"><a href="#">More Details</a></p>
-          </div>
-          <div class="search-details-info-test">
-            <h5 class="search-details-title-test">A Dance of Dragons</h5>
-            <h6 class="search-details-author-test">George R. R. Martin</h6>
-            <div class="search-details-time-test">
-              <p class="search-details-time-title-test">Expected Reading Time: </p>
-              <p class="search-details-time-amount-test">49 Hours and 24 Minutes</p>
+  <div class="container">
+    <div class="row search-results-bar quick-reads">
+      <div class="col-xs-12 search-results">
+        <ul class="container-test">
+          <li class="search-card-test">
+            <div class="search-details-cover-test">
+              <img  src="./img/1.jpg">
+              <p class="details-link-test"><a href="#">More Details</a></p>
             </div>
-            <img class="amazon-banner-01" src="./img/icons/amazon-banner-01.gif">
-          </div>
-          <div class="search-details-table-test">      
-            <table>
-              <tr><th>Year</th> <td>2011</td></tr>
-              <tr><th>Pages</th> <td>512</td></tr>
-              <tr><th>Words</th> <td>344,000</td></tr>
-              <tr><th>Genre</th> <td>Fantasy</td></tr>
-            </table>    
+            <div class="search-details-info-test">
+              <h5 class="search-details-title-test">A Game Of Thrones</h5>
+              <h6 class="search-details-author-test">George R. R. Martin</h6>
+              <div class="search-details-time-test">
+                <p class="search-details-time-title-test">Expected Reading Time: </p>
+                <p class="search-details-time-amount-test">49 Hours and 24 Minutes</p>
+              </div>
+              <img class="amazon-banner-01" src="./img/icons/amazon-banner-01.gif">
+            </div>
+            <div class="search-details-table-test">      
+              <table>
+                <tr><th>Year</th> <td>2011</td></tr>
+                <tr><th>Pages</th> <td>512</td></tr>
+                <tr><th>Words</th> <td>344,000</td></tr>
+                <tr><th>Genre</th> <td>Fantasy</td></tr>
+              </table> 
+            </div> 
+          </li>
+
+          <li class="search-card-test">
+            <div class="search-details-cover-test">
+              <img  src="./img/2.jpg">
+              <p class="details-link-test"><a href="#">More Details</a></p>
+            </div>
+            <div class="search-details-info-test">
+              <h5 class="search-details-title-test">A Clash of Kings</h5>
+              <h6 class="search-details-author-test">George R. R. Martin</h6>
+              <div class="search-details-time-test">
+                <p class="search-details-time-title-test">Expected Reading Time: </p>
+                <p class="search-details-time-amount-test">49 Hours and 24 Minutes</p>
+              </div>
+              <img class="amazon-banner-01" src="./img/icons/amazon-banner-01.gif">
+            </div>
+            <div class="search-details-table-test">      
+              <table>
+                <tr><th>Year</th> <td>2011</td></tr>
+                <tr><th>Pages</th> <td>512</td></tr>
+                <tr><th>Words</th> <td>344,000</td></tr>
+                <tr><th>Genre</th> <td>Fantasy</td></tr>
+              </table> 
+            </div>   
+          </li>
+          <li class="search-card-test">
+            <div class="search-details-cover-test">
+              <img  src="./img/5.jpg">
+              <p class="details-link-test"><a href="#">More Details</a></p>
+            </div>
+            <div class="search-details-info-test">
+              <h5 class="search-details-title-test">A Dance of Dragons</h5>
+              <h6 class="search-details-author-test">George R. R. Martin</h6>
+              <div class="search-details-time-test">
+                <p class="search-details-time-title-test">Expected Reading Time: </p>
+                <p class="search-details-time-amount-test">49 Hours and 24 Minutes</p>
+              </div>
+              <img class="amazon-banner-01" src="./img/icons/amazon-banner-01.gif">
+            </div>
+            <div class="search-details-table-test">      
+              <table>
+                <tr><th>Year</th> <td>2011</td></tr>
+                <tr><th>Pages</th> <td>512</td></tr>
+                <tr><th>Words</th> <td>344,000</td></tr>
+                <tr><th>Genre</th> <td>Fantasy</td></tr>
+              </table> 
+            </div>   
           </li>
           <li class="search-card-test">
             <div class="search-details-cover-test">
@@ -100,13 +104,16 @@
                 <tr><th>Pages</th> <td>512</td></tr>
                 <tr><th>Words</th> <td>344,000</td></tr>
                 <tr><th>Genre</th> <td>Fantasy</td></tr>
-              </table>    
-            </li>
-          </ul>
-
-          <!-- jQuery first, then Tether, then Bootstrap JS. -->
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
-          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
-        </body>
-        </html>
+              </table> 
+            </div>   
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <!-- jQuery first, then Tether, then Bootstrap JS. -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
+</body>
+</html>
