--- a/search_landing.html
+++ b/search_landing.html
@@ -8,7 +8,7 @@
   <title>Search Results</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="css/style-test.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
   <nav class="navbar navbar-dark navbar-fixed-top bg-primary text-white">
@@ -69,30 +69,100 @@
         </nav>
       </div>
       <div class="col-xs-12 search-results">
-        <ul>
-          <li class="search-card">
-            <div class="search-details-cover">
+              <ul class="container-test">
+          <li class="search-card-test">
+            <div class="search-details-cover-test">
               <img  src="./img/1.jpg">
-              <p class="details-link"><a href="#">More Details</a></p>
+              <p class="details-link-test"><a href="#">More Details</a></p>
             </div>
-            <div class="search-details-info">
-              <h5 class="search-details-title">A Game Of Thrones</h5>
-              <h6 class="search-details-author">George R. R. Martin</h6>
-              <div class="search-details-time">
-                <p class="search-details-time-title">Expected Reading Time: </p>
-                <p class="search-details-time-amount">49 Hours and 24 Minutes</p>
-                <img class="amazon-banner-01" src="./img/icons/amazon-banner-01.gif">
+            <div class="search-details-info-test">
+              <h5 class="search-details-title-test">A Game Of Thrones</h5>
+              <h6 class="search-details-author-test">George R. R. Martin</h6>
+              <div class="search-details-time-test">
+                <p class="search-details-time-title-test">Expected Reading Time: </p>
+                <p class="search-details-time-amount-test">49 Hours and 24 Minutes</p>
               </div>
-
-              <table class="search-details-table">
+              <img class="amazon-banner-01" src="./img/icons/amazon-banner-01.gif">
+            </div>
+            <div class="search-details-table-test">      
+              <table>
                 <tr><th>Year</th> <td>2011</td></tr>
                 <tr><th>Pages</th> <td>512</td></tr>
                 <tr><th>Words</th> <td>344,000</td></tr>
                 <tr><th>Genre</th> <td>Fantasy</td></tr>
-              </table>
-            </div><!-- Search-details-info -->
-          </li><!-- Search-Card -->
+              </table> 
+            </div> 
+          </li>
 
+          <li class="search-card-test">
+            <div class="search-details-cover-test">
+              <img  src="./img/2.jpg">
+              <p class="details-link-test"><a href="#">More Details</a></p>
+            </div>
+            <div class="search-details-info-test">
+              <h5 class="search-details-title-test">A Clash of Kings</h5>
+              <h6 class="search-details-author-test">George R. R. Martin</h6>
+              <div class="search-details-time-test">
+                <p class="search-details-time-title-test">Expected Reading Time: </p>
+                <p class="search-details-time-amount-test">49 Hours and 24 Minutes</p>
+              </div>
+              <img class="amazon-banner-01" src="./img/icons/amazon-banner-01.gif">
+            </div>
+            <div class="search-details-table-test">      
+              <table>
+                <tr><th>Year</th> <td>2011</td></tr>
+                <tr><th>Pages</th> <td>512</td></tr>
+                <tr><th>Words</th> <td>344,000</td></tr>
+                <tr><th>Genre</th> <td>Fantasy</td></tr>
+              </table> 
+            </div>   
+          </li>
+          <li class="search-card-test">
+            <div class="search-details-cover-test">
+              <img  src="./img/5.jpg">
+              <p class="details-link-test"><a href="#">More Details</a></p>
+            </div>
+            <div class="search-details-info-test">
+              <h5 class="search-details-title-test">A Dance of Dragons</h5>
+              <h6 class="search-details-author-test">George R. R. Martin</h6>
+              <div class="search-details-time-test">
+                <p class="search-details-time-title-test">Expected Reading Time: </p>
+                <p class="search-details-time-amount-test">49 Hours and 24 Minutes</p>
+              </div>
+              <img class="amazon-banner-01" src="./img/icons/amazon-banner-01.gif">
+            </div>
+            <div class="search-details-table-test">      
+              <table>
+                <tr><th>Year</th> <td>2011</td></tr>
+                <tr><th>Pages</th> <td>512</td></tr>
+                <tr><th>Words</th> <td>344,000</td></tr>
+                <tr><th>Genre</th> <td>Fantasy</td></tr>
+              </table> 
+            </div>   
+          </li>
+          <li class="search-card-test">
+            <div class="search-details-cover-test">
+              <img  src="./img/4.jpg">
+              <p class="details-link-test"><a href="#">More Details</a></p>
+            </div>
+            <div class="search-details-info-test">
+              <h5 class="search-details-title-test">A Feast for Crows</h5>
+              <h6 class="search-details-author-test">George R. R. Martin</h6>
+              <div class="search-details-time-test">
+                <p class="search-details-time-title-test">Expected Reading Time: </p>
+                <p class="search-details-time-amount-test">49 Hours and 24 Minutes</p>
+              </div>
+              <img class="amazon-banner-01" src="./img/icons/amazon-banner-01.gif">
+            </div>
+            <div class="search-details-table-test">      
+              <table>
+                <tr><th>Year</th> <td>2011</td></tr>
+                <tr><th>Pages</th> <td>512</td></tr>
+                <tr><th>Words</th> <td>344,000</td></tr>
+                <tr><th>Genre</th> <td>Fantasy</td></tr>
+              </table> 
+            </div>   
+          </li>
         </ul>
       </div><!-- Search Results -->
     </div>
