--- a/search_landing.html
+++ b/search_landing.html
@@ -45,187 +45,184 @@
     </div><!-- container  -->
   </div><!-- jumbotron  -->
   <div class="container">
-  <div class="row search-results-bar quick-reads">
-      <div class="col-xs-3 list-title">
-        <h4>Search Results</h4>
-      </div>
-      <div class="col-xs-5 offset-xs-4">
-        <nav aria-label="Page navigation ">
-          <ul class="pagination pagination-sm">
-            <li class="page-item disabled"">
-              <a class="page-link" href="#" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-                <span class="sr-only">Previous</span>
-              </a>
-            </li>
-            <li class="page-item active"><a class="page-link" href="#">1</a></li>
-            <li class="page-item">
-              <a class="page-link" href="#" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-                <span class="sr-only">Next</span>
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-      <div class="col-xs-12 search-results">
-              <ul class="container-test">
-          <li class="search-card-test">
-            <div class="search-details-cover-test">
-              <img  src="./img/1.jpg">
-              <p class="details-link-test"><a href="#">More Details</a></p>
-            </div>
-            <div class="search-details-info-test">
-              <h5 class="search-details-title-test">A Game Of Thrones</h5>
-              <h6 class="search-details-author-test">George R. R. Martin</h6>
-              <div class="search-details-time-test">
-                <p class="search-details-time-title-test">Expected Reading Time: </p>
-                <p class="search-details-time-amount-test">49 Hours and 24 Minutes</p>
-              </div>
-              <img class="amazon-banner-01" src="./img/icons/amazon-banner-01.gif">
-            </div>
-            <div class="search-details-table-test">      
-              <table>
-                <tr><th>Year</th> <td>2011</td></tr>
-                <tr><th>Pages</th> <td>512</td></tr>
-                <tr><th>Words</th> <td>344,000</td></tr>
-                <tr><th>Genre</th> <td>Fantasy</td></tr>
-              </table> 
-            </div> 
+    <div class="row search-results-bar">
+      <h4>Search Results</h4>
+      <nav aria-label="Page navigation ">
+        <ul class="pagination pagination-sm">
+          <li class="page-item disabled"">
+            <a class="page-link" href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+              <span class="sr-only">Previous</span>
+            </a>
           </li>
-
-          <li class="search-card-test">
-            <div class="search-details-cover-test">
-              <img  src="./img/2.jpg">
-              <p class="details-link-test"><a href="#">More Details</a></p>
-            </div>
-            <div class="search-details-info-test">
-              <h5 class="search-details-title-test">A Clash of Kings</h5>
-              <h6 class="search-details-author-test">George R. R. Martin</h6>
-              <div class="search-details-time-test">
-                <p class="search-details-time-title-test">Expected Reading Time: </p>
-                <p class="search-details-time-amount-test">49 Hours and 24 Minutes</p>
-              </div>
-              <img class="amazon-banner-01" src="./img/icons/amazon-banner-01.gif">
-            </div>
-            <div class="search-details-table-test">      
-              <table>
-                <tr><th>Year</th> <td>2011</td></tr>
-                <tr><th>Pages</th> <td>512</td></tr>
-                <tr><th>Words</th> <td>344,000</td></tr>
-                <tr><th>Genre</th> <td>Fantasy</td></tr>
-              </table> 
-            </div>   
-          </li>
-          <li class="search-card-test">
-            <div class="search-details-cover-test">
-              <img  src="./img/5.jpg">
-              <p class="details-link-test"><a href="#">More Details</a></p>
-            </div>
-            <div class="search-details-info-test">
-              <h5 class="search-details-title-test">A Dance of Dragons</h5>
-              <h6 class="search-details-author-test">George R. R. Martin</h6>
-              <div class="search-details-time-test">
-                <p class="search-details-time-title-test">Expected Reading Time: </p>
-                <p class="search-details-time-amount-test">49 Hours and 24 Minutes</p>
-              </div>
-              <img class="amazon-banner-01" src="./img/icons/amazon-banner-01.gif">
-            </div>
-            <div class="search-details-table-test">      
-              <table>
-                <tr><th>Year</th> <td>2011</td></tr>
-                <tr><th>Pages</th> <td>512</td></tr>
-                <tr><th>Words</th> <td>344,000</td></tr>
-                <tr><th>Genre</th> <td>Fantasy</td></tr>
-              </table> 
-            </div>   
-          </li>
-          <li class="search-card-test">
-            <div class="search-details-cover-test">
-              <img  src="./img/4.jpg">
-              <p class="details-link-test"><a href="#">More Details</a></p>
-            </div>
-            <div class="search-details-info-test">
-              <h5 class="search-details-title-test">A Feast for Crows</h5>
-              <h6 class="search-details-author-test">George R. R. Martin</h6>
-              <div class="search-details-time-test">
-                <p class="search-details-time-title-test">Expected Reading Time: </p>
-                <p class="search-details-time-amount-test">49 Hours and 24 Minutes</p>
-              </div>
-              <img class="amazon-banner-01" src="./img/icons/amazon-banner-01.gif">
-            </div>
-            <div class="search-details-table-test">      
-              <table>
-                <tr><th>Year</th> <td>2011</td></tr>
-                <tr><th>Pages</th> <td>512</td></tr>
-                <tr><th>Words</th> <td>344,000</td></tr>
-                <tr><th>Genre</th> <td>Fantasy</td></tr>
-              </table> 
-            </div>   
+          <li class="page-item active"><a class="page-link" href="#">1</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+              <span class="sr-only">Next</span>
+            </a>
           </li>
         </ul>
-      </div><!-- Search Results -->
+      </nav>
+    </div>
+    <div class="col-xs-12 search-results">
+      <ul class="container-test">
+        <li class="search-card-test">
+          <div class="search-details-cover-test">
+            <img  src="./img/1.jpg">
+            <p class="details-link-test"><a href="#">More Details</a></p>
+          </div>
+          <div class="search-details-info-test">
+            <h5 class="search-details-title-test">A Game Of Thrones</h5>
+            <h6 class="search-details-author-test">George R. R. Martin</h6>
+            <div class="search-details-time-test">
+              <p class="search-details-time-title-test">Expected Reading Time: </p>
+              <p class="search-details-time-amount-test">49 Hours and 24 Minutes</p>
+            </div>
+            <img class="amazon-banner-01" src="./img/icons/amazon-banner-01.gif">
+          </div>
+          <div class="search-details-table-test">      
+            <table>
+              <tr><th>Year</th> <td>2011</td></tr>
+              <tr><th>Pages</th> <td>512</td></tr>
+              <tr><th>Words</th> <td>344,000</td></tr>
+              <tr><th>Genre</th> <td>Fantasy</td></tr>
+            </table> 
+          </div> 
+        </li>
+
+        <li class="search-card-test">
+          <div class="search-details-cover-test">
+            <img  src="./img/2.jpg">
+            <p class="details-link-test"><a href="#">More Details</a></p>
+          </div>
+          <div class="search-details-info-test">
+            <h5 class="search-details-title-test">A Clash of Kings</h5>
+            <h6 class="search-details-author-test">George R. R. Martin</h6>
+            <div class="search-details-time-test">
+              <p class="search-details-time-title-test">Expected Reading Time: </p>
+              <p class="search-details-time-amount-test">49 Hours and 24 Minutes</p>
+            </div>
+            <img class="amazon-banner-01" src="./img/icons/amazon-banner-01.gif">
+          </div>
+          <div class="search-details-table-test">      
+            <table>
+              <tr><th>Year</th> <td>2011</td></tr>
+              <tr><th>Pages</th> <td>512</td></tr>
+              <tr><th>Words</th> <td>344,000</td></tr>
+              <tr><th>Genre</th> <td>Fantasy</td></tr>
+            </table> 
+          </div>   
+        </li>
+        <li class="search-card-test">
+          <div class="search-details-cover-test">
+            <img  src="./img/5.jpg">
+            <p class="details-link-test"><a href="#">More Details</a></p>
+          </div>
+          <div class="search-details-info-test">
+            <h5 class="search-details-title-test">A Dance of Dragons</h5>
+            <h6 class="search-details-author-test">George R. R. Martin</h6>
+            <div class="search-details-time-test">
+              <p class="search-details-time-title-test">Expected Reading Time: </p>
+              <p class="search-details-time-amount-test">49 Hours and 24 Minutes</p>
+            </div>
+            <img class="amazon-banner-01" src="./img/icons/amazon-banner-01.gif">
+          </div>
+          <div class="search-details-table-test">      
+            <table>
+              <tr><th>Year</th> <td>2011</td></tr>
+              <tr><th>Pages</th> <td>512</td></tr>
+              <tr><th>Words</th> <td>344,000</td></tr>
+              <tr><th>Genre</th> <td>Fantasy</td></tr>
+            </table> 
+          </div>   
+        </li>
+        <li class="search-card-test">
+          <div class="search-details-cover-test">
+            <img  src="./img/4.jpg">
+            <p class="details-link-test"><a href="#">More Details</a></p>
+          </div>
+          <div class="search-details-info-test">
+            <h5 class="search-details-title-test">A Feast for Crows</h5>
+            <h6 class="search-details-author-test">George R. R. Martin</h6>
+            <div class="search-details-time-test">
+              <p class="search-details-time-title-test">Expected Reading Time: </p>
+              <p class="search-details-time-amount-test">49 Hours and 24 Minutes</p>
+            </div>
+            <img class="amazon-banner-01" src="./img/icons/amazon-banner-01.gif">
+          </div>
+          <div class="search-details-table-test">      
+            <table>
+              <tr><th>Year</th> <td>2011</td></tr>
+              <tr><th>Pages</th> <td>512</td></tr>
+              <tr><th>Words</th> <td>344,000</td></tr>
+              <tr><th>Genre</th> <td>Fantasy</td></tr>
+            </table> 
+          </div>   
+        </li>
+      </ul>
+    </div><!-- Search Results -->
+  </div>
+</div>
+
+
+
+<!-- Trending -->
+<div class="container">
+  <div class="row book-showcase quick-reads">
+    <div class="col-xs-12 list-title">
+      <h6>Now Trending<span class="tag tag-default float-xs-right">See All</span></h6>
+    </div>
+    <div class="col-xs-12 carousel">
+      <ul>
+        <li>
+          <div class="carousel-card">
+            <img class="carousel-cover" src="./img/11.jpg">
+            <span class="carousel-time">4 hrs.</span>
+          </div>
+
+        </li>
+
+        <li>
+          <div class="carousel-card">
+            <img class="carousel-cover" src="./img/12.jpg">
+            <span class="carousel-time">4 hrs.</span>
+          </div>
+
+        </li>
+
+        <li>
+          <div class="carousel-card">
+            <img class="carousel-cover" src="./img/13.jpg">
+            <span class="carousel-time">2 hrs.</span>
+          </div>
+
+        </li>
+
+        <li>
+          <div class="carousel-card">
+            <img class="carousel-cover" src="./img/14.jpg">
+            <span class="carousel-time">12 hrs.</span>
+          </div>
+
+        </li>
+
+      </ul>
     </div>
   </div>
+</div>
 
 
-
-  <!-- Trending -->
+<footer class="footer bg-primary text-xs-center">
   <div class="container">
-    <div class="row book-showcase quick-reads">
-      <div class="col-xs-12 list-title">
-        <h6>Now Trending<span class="tag tag-default float-xs-right">See All</span></h6>
-      </div>
-      <div class="col-xs-12 carousel">
-        <ul>
-          <li>
-            <div class="carousel-card">
-              <img class="carousel-cover" src="./img/11.jpg">
-              <span class="carousel-time">4 hrs.</span>
-            </div>
-
-          </li>
-
-          <li>
-            <div class="carousel-card">
-              <img class="carousel-cover" src="./img/12.jpg">
-              <span class="carousel-time">4 hrs.</span>
-            </div>
-
-          </li>
-
-          <li>
-            <div class="carousel-card">
-              <img class="carousel-cover" src="./img/13.jpg">
-              <span class="carousel-time">2 hrs.</span>
-            </div>
-
-          </li>
-
-          <li>
-            <div class="carousel-card">
-              <img class="carousel-cover" src="./img/14.jpg">
-              <span class="carousel-time">12 hrs.</span>
-            </div>
-
-          </li>
-
-        </ul>
-      </div>
-    </div>
+    <span class="text-white">&copy2016 ReadMeter Inc.</span>
   </div>
+</footer>
 
 
-  <footer class="footer bg-primary text-xs-center">
-    <div class="container">
-      <span class="text-white">&copy2016 ReadMeter Inc.</span>
-    </div>
-  </footer>
-
-
-  <!-- jQuery first, then Tether, then Bootstrap JS. -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
+<!-- jQuery first, then Tether, then Bootstrap JS. -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
 </body>
 </html>
