Refactor to Jade

--- a/output.html
+++ b/output.html
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="row pt-1 text-xs-center">
-        <h4>Reading Should Be Fun</h4>
+        <h4>Reading Is Fun</h4>
         <p class="small">We are here to help you make the most of it!</p>
       </div>
     </div>
