--- a/output.html
+++ b/output.html
@@ -13,13 +13,8 @@
   <body> 
     <header class="main-header">
       <nav class="navbar navbar-dark navbar-fixed-top bg-primary text-white">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-1">
-              <button type="button" data-toggle="collapse" data-target="#exCollapsingNavbar" aria-controls="exCollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"></button>
-            </div>
-            <div class="col-xs-4 offset-xs-1"><a href="#" class="navbar-brand">ReadMeter</a></div>
-          </div>
+        <div class="container nav-top">
+          <button type="button" data-toggle="collapse" data-target="#exCollapsingNavbar" aria-controls="exCollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"></button><a href="#" class="navbar-brand">ReadMeter</a>
         </div>
         <div id="exCollapsingNavbar" class="collapse">
           <div class="bg-primary text-white">
