--- a/output.html
+++ b/output.html
@@ -19,7 +19,7 @@
         <div id="exCollapsingNavbar" class="collapse">
           <div class="bg-primary text-white">
             <ul class="nav-collapse">
-              <li><a href="Home.html">Home</a></li>
+              <li><a href="Home1.html">Home1</a></li>
               <li><a href="About.html">About</a></li>
               <li><a href="Browse.html">Browse</a></li>
             </ul>
