--- a/output.html
+++ b/output.html
@@ -16,12 +16,12 @@
         <div class="container nav-top">
           <button type="button" data-toggle="collapse" data-target="#exCollapsingNavbar" aria-controls="exCollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"></button><a href="#" class="navbar-brand">ReadMeter</a>
         </div>
-        <div id="exCollapsingNavbar" class="collapse">
+        <div id="exCollapsingNavbar" class="collapse collapse-nav">
           <div class="bg-primary text-white">
             <ul class="nav-collapse">
-              <li><a href="Home2.html">Home2</a></li>
-              <li><a href="About.html">About</a></li>
+              <li><a href="Home.html">Home</a></li>
               <li><a href="Browse.html">Browse</a></li>
+              <li><a href="About.html">About</a></li>
             </ul>
           </div>
         </div>
@@ -60,6 +60,24 @@
                     <li>
                       <div class="carousel-card"><img src="./img/4.jpg" class="carousel-cover"><span class="carousel-time">8 hrs.</span></div>
                     </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/5.jpg" class="carousel-cover"><span class="carousel-time">4 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/11.jpg" class="carousel-cover"><span class="carousel-time">2 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/12.jpg" class="carousel-cover"><span class="carousel-time">13 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/13.jpg" class="carousel-cover"><span class="carousel-time">8 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/14.jpg" class="carousel-cover"><span class="carousel-time">8 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/15.jpg" class="carousel-cover"><span class="carousel-time">4 hrs.</span></div>
+                    </li>
               </ul>
             </div>
           </div>
@@ -94,5 +112,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
