--- a/index.html
+++ b/index.html
@@ -1,154 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <!-- Required meta tags always come first -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="plugins-0/reset/_reset.css">
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-<body>
-  <nav class="navbar navbar-dark navbar-fixed-top bg-primary text-white">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-1">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar" aria-controls="exCollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation"></button>
-          <div class="collapse" id="exCollapsingNavbar">
-            <div class="bg-primary text-white p-1">
-              <h4>Collapsed content</h4>
-              <span class="text-white">Toggleable via the navbar brand.</span>
-            </div>
+  <head>
+    <!-- Required meta tags always come first-->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="plugins-0/reset/_reset.css">
+    <!-- Bootstrap CSS-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+  </head>
+  <body> 
+    <header class="main-header">
+      <nav class="navbar navbar-dark navbar-fixed-top bg-primary text-white">
+        <div class="container nav-top">
+          <button type="button" data-toggle="collapse" data-target="#exCollapsingNavbar" aria-controls="exCollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"></button><a href="#" class="navbar-brand">ReadMeter</a>
+        </div>
+        <div id="exCollapsingNavbar" class="collapse collapse-nav">
+          <div class="bg-primary text-white">
+            <ul class="nav-collapse">
+              <li><a href="index.html">Home</a>
+              </li>
+              <li><a href="browse.html">Browse</a>
+              </li>
+              <li><a href="about.html">About</a>
+              </li>
+            </ul>
           </div>
         </div>
-        <div class="col-xs-4 offset-xs-1">
-          <a class="navbar-brand" href="#">ReadMeter</a>
-        </div>
-        <div class="col-xs-6"></div>
-      </div> <!-- Row  -->
-    </div> <!-- container  -->
-  </nav>
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container search-bar">
-      <div class="row">
+      </nav>
+    </header>
+    <div class="jumbotron jumbotron-fluid search-bar">
+      <div class="row px-3">
         <div class="col-xs-12">
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search for books...">
-            <span class="input-group-btn">
-              <button class="btn btn-primary" type="button">Go!</button>
-            </span>
+            <input type="text" placeholder="Search for books..." class="form-control"><span class="input-group-btn">
+              <button type="button" class="btn btn-primary">Go!</button></span>
           </div>
         </div>
-      </div><!-- row  -->
+      </div>
       <div class="row pt-1 text-xs-center">
-        <h4>Reading Should Be Fun</h4>
+        <h4>Reading Is Fun</h4>
         <p class="small">We are here to help you make the most of it!</p>
       </div>
-    </div><!-- container  -->
-  </div><!-- jumbotron  -->
-  <div class="container">
-    <div class="row book-showcase quick-reads">
-      <div class="col-xs-12 list-title">
-        <h6>Quick Reads<span class="tag tag-default float-xs-right">See All</span></h6>
-      </div>
-      <div class="col-xs-12 carousel">
-        <ul>
-          <li>
-            <div class="carousel-card">
-              <img class="carousel-cover" src="./img/1.jpg">
-              <span class="carousel-time">4 hrs.</span>
-            </div>
-
-          </li>
-
-          <li>
-            <div class="carousel-card">
-              <img class="carousel-cover" src="./img/2.jpg">
-              <span class="carousel-time">4 hrs.</span>
-            </div>
-
-          </li>
-
-          <li>
-            <div class="carousel-card">
-              <img class="carousel-cover" src="./img/3.jpg">
-              <span class="carousel-time">2 hrs.</span>
-            </div>
-
-          </li>
-
-          <li>
-            <div class="carousel-card">
-              <img class="carousel-cover" src="./img/4.jpg">
-              <span class="carousel-time">12 hrs.</span>
-            </div>
-
-          </li>
-        </ul>
-      </div>
     </div>
-  </div>
-
-
-
-  <!-- Trending -->
-  <div class="container">
-    <div class="row book-showcase quick-reads">
-      <div class="col-xs-12 list-title">
-        <h6>Now Trending<span class="tag tag-default float-xs-right">See All</span></h6>
-      </div>
-      <div class="col-xs-12 carousel">
-        <ul>
-          <li>
-            <div class="carousel-card">
-              <img class="carousel-cover" src="./img/11.jpg">
-              <span class="carousel-time">4 hrs.</span>
+        <div class="container">
+          <div class="row book-showcase quick-reads">
+            <div class="col-xs-12 list-title list-quick-reads">
+              <h6 class="section-title">Quick Reads<span class="tag tag-default float-xs-right">See All</span></h6>
             </div>
-
-          </li>
-
-          <li>
-            <div class="carousel-card">
-              <img class="carousel-cover" src="./img/12.jpg">
-              <span class="carousel-time">4 hrs.</span>
+            <div class="col-xs-12 carousel">
+              <ul>
+                    <li>
+                      <div class="carousel-card"><img src="./img/1.jpg" class="carousel-cover"><span class="carousel-time">4 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/2.jpg" class="carousel-cover"><span class="carousel-time">13 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/3.jpg" class="carousel-cover"><span class="carousel-time">8 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/4.jpg" class="carousel-cover"><span class="carousel-time">8 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/5.jpg" class="carousel-cover"><span class="carousel-time">4 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/11.jpg" class="carousel-cover"><span class="carousel-time">2 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/12.jpg" class="carousel-cover"><span class="carousel-time">13 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/13.jpg" class="carousel-cover"><span class="carousel-time">8 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/14.jpg" class="carousel-cover"><span class="carousel-time">8 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/15.jpg" class="carousel-cover"><span class="carousel-time">4 hrs.</span></div>
+                    </li>
+              </ul>
             </div>
-
-          </li>
-
-          <li>
-            <div class="carousel-card">
-              <img class="carousel-cover" src="./img/13.jpg">
-              <span class="carousel-time">2 hrs.</span>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row book-showcase quick-reads">
+            <div class="col-xs-12 list-title list-now-trending">
+              <h6 class="section-title">Now Trending<span class="tag tag-default float-xs-right">See All</span></h6>
             </div>
-
-          </li>
-
-          <li>
-            <div class="carousel-card">
-              <img class="carousel-cover" src="./img/14.jpg">
-              <span class="carousel-time">12 hrs.</span>
+            <div class="col-xs-12 carousel">
+              <ul>
+                    <li>
+                      <div class="carousel-card"><img src="./img/5.jpg" class="carousel-cover"><span class="carousel-time">4 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/11.jpg" class="carousel-cover"><span class="carousel-time">2 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/12.jpg" class="carousel-cover"><span class="carousel-time">13 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/13.jpg" class="carousel-cover"><span class="carousel-time">8 hrs.</span></div>
+                    </li>
+              </ul>
             </div>
-
-          </li>
-
-        </ul>
-      </div>
-    </div>
-  </div>
-
-
-  <footer class="footer bg-primary text-xs-center">
-    <div class="container">
-    <span class="text-white">&copy;2016 ReadMeter Inc.</span>
-    </div>
-  </footer>
-
-
-  <!-- jQuery first, then Tether, then Bootstrap JS. -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
-</body>
+          </div>
+        </div>
+    <footer class="main-footer bg-primary text-xs-center">
+      <div class="container"><span class="text-white">©2016 ReadMeter Inc.</span></div>
+    </footer>
+    <!-- jQuery first, then Tether, then Bootstrap JS.-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/script.js"></script>
+  </body>
 </html>
